adding a notice for when there are no images, so the page isnt just blank

--- a/django-openstack/django_openstack/templates/django_openstack/dash/images/index.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/images/index.html
@@ -16,5 +16,10 @@
   {% if images %}
     {% include 'django_openstack/dash/images/_list.html' %}
 
-  {% endif %}
+    {% else %}
+      <div class="message_box info">
+        <h2>Info</h2>
+        <p>There are currently no images.</p>
+      </div>
+    {% endif %}
 {% endblock %}
