--- a/openstack-dashboard/dashboard/templates/base.html
+++ b/openstack-dashboard/dashboard/templates/base.html
@@ -8,10 +8,11 @@
     <script charset='utf-8' src='{{ STATIC_URL }}dashboard/js/jquery-ui.min.js' type='text/javascript'></script>
     <script charset='utf-8' src='{{ STATIC_URL }}dashboard/js/jquery.quicksearch.js' type='text/javascript'></script>
     <script charset='utf-8' src='{{ STATIC_URL }}dashboard/js/jquery.example.min.js' type='text/javascript'></script>
+    <script charset='utf-8' src='{{ STATIC_URL }}dashboard/js/jquery.chosen.js' type='text/javascript'></script>
     <script charset='utf-8' src='{{ STATIC_URL }}dashboard/js/form_examples.js' type='text/javascript'></script>
     <script charset='utf-8' src='{{ STATIC_URL }}dashboard/js/application.js' type='text/javascript'></script>
     <link href='{{ STATIC_URL }}dashboard/css/style.css' media='screen' rel='stylesheet' />
-    <link href='/media/dashboard/css/chosen.css' media='screen' rel='stylesheet' />
+    <link href='{{ STATIC_URL }}/dashboard/css/chosen.css' media='screen' rel='stylesheet' />
     {% block headerjs %}{% endblock %}
     {% block headercss %}{% endblock %}
   </head>
