adding the ability to import an existing public key as a keypair

--- a/django-openstack/django_openstack/templates/django_openstack/dash/keypairs/_form.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/keypairs/_form.html
@@ -6,5 +6,5 @@
     {{ field.errors }}
     {{ field }}
   {% endfor %}
-  <input type="submit" value="Create Keypair" class="large-rounded" />
+  <input type="submit" value="Add Keypair" class="large-rounded" />
 </form> 
