add settings page to choose UI language

--- a/openstack-dashboard/dashboard/templates/_topbar.html
+++ b/openstack-dashboard/dashboard/templates/_topbar.html
@@ -10,6 +10,7 @@
     {% else %}
       NOT _LOGGED_IN_TOPBAR
     {% endif %}
+    <li><a id="settings_btn" href="{% url dashboard_settings %}">&nbsp;</a></li>
   </ul>
 
   <div id="user_bar">
