--- a/django-openstack/django_openstack/templates/django_openstack/dash/images/_list.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/images/_list.html
@@ -14,14 +14,15 @@
       <td>{{image.created_at|parse_date}}</td>
       <td>{{image.updated_at|parse_date}}</td>
       <td>{{image.status|capfirst}}</td>
-      {% if image.owner == request.user.username %}
-        <td id="actions">
+      <td id="actions">
           <ul>
+      {% if image.owner == request.user.username %}
             <li class="form">{% include "django_openstack/dash/images/_delete.html" with form=delete_form %}</li>
             <li><a href="{% url dash_images_update request.user.tenant_id image.id %}">Edit</a></li>
+      {% endif %}
+            <li><a id="launch_{{image.id}}" class="launch" href="{% url dash_images_launch request.user.tenant_id image.id %}">Launch</a></li>
           </ul>
         </td>
-      {% endif %}
   </tr>
   {% endfor %}
 </table>
