--- a/django-openstack/django_openstack/templates/django_openstack/dash/dashboard_settings.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/dashboard_settings.html
@@ -8,13 +8,13 @@
 {% block page_header %}
   {% url dash_instances request.user.tenant_id as refresh_link %}
   {# to make searchable false, just remove it from the include statement #}
-  {% include "django_openstack/common/_page_header.html" with title="Dashboard Settings" %}
+  {% include "django_openstack/common/_page_header.html" with title=_("Dashboard Settings") %}
 {% endblock page_header %}
 
 {% block dash_main %}
   <div class="dash_block">
     <div class="left">
-        <h3> Dashboard User Interface Language </h3>
+        <h3>{% trans "Dashboard User Interface Language"%}</h3>
         <form action="/i18n/setlang/" method="post"> {% csrf_token %}
           <p><select name="language">
           {% get_language_info_list for LANGUAGES as languages %}
@@ -26,7 +26,7 @@
               {%endif%}
           {% endfor %}
           </select></p>
-          <input type="submit" value="Select Language"  class="large-rounded" />
+          <input type="submit" value="{% trans "Select Language"%}"  class="large-rounded" />
         </form>
     </div>
     <div class="clear">&nbsp;</div>
