--- a/django-openstack/django_openstack/templates/django_openstack/dash/floating_ips/index.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/floating_ips/index.html
@@ -1,4 +1,5 @@
 {% extends 'django_openstack/dash/base.html' %}
+{%load i18n%}
 
 {% block sidebar %}
   {% with current_sidebar="floatingips" %}
@@ -9,7 +10,7 @@
 {% block page_header %}
   {% url dash_floating_ips request.user.tenant_id as refresh_link %}
   {# to make searchable false, just remove it from the include statement #}
-  {% include "django_openstack/common/_page_header.html" with title="Floating IPs" refresh_link=refresh_link searchable="true" %}
+  {% include "django_openstack/common/_page_header.html" with title=_("Floating IPs") refresh_link=refresh_link searchable="true" %}
 {% endblock page_header %}
 
 {% block dash_main %}
@@ -17,8 +18,8 @@
     {% include 'django_openstack/dash/floating_ips/_list.html' %}
   {% else %}
     <div class="message_box info">
-      <h2>Info</h2>
-      <p>There are currently no floating ips assigned to your tenant.</p>
+      <h2>{%trans "Info"%}</h2>
+      <p>{%trans "There are currently no floating ips assigned to your tenant."%}</p>
     </div>
   {% endif %}
   {% include "django_openstack/dash/floating_ips/_allocate.html" with form=allocate_form %}
