--- a/django-openstack/django_openstack/templates/django_openstack/dash/images/_list.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/images/_list.html
@@ -1,11 +1,12 @@
+{%load i18n%}
 {% load parse_date %}
 <table id="images" class="wide">
   <tr>
-    <th>ID</th>
-    <th>Name</th>
-    <th>Created</th>
-    <th>Updated</th>
-    <th colspan="2">Status</th>
+    <th>{%trans "ID"%}</th>
+    <th>{%trans "Name"%}</th>
+    <th>{%trans "Created"%}</th>
+    <th>{%trans "Updated"%}</th>
+    <th colspan="2">{%trans "Status"%}</th>
   </tr>
   {% for image in images %}
   <tr class="{% cycle 'odd' 'even' %}">
@@ -18,9 +19,9 @@
           <ul>
       {% if image.owner == request.user.username %}
             <li class="form">{% include "django_openstack/dash/images/_delete.html" with form=delete_form %}</li>
-            <li><a href="{% url dash_images_update request.user.tenant_id image.id %}">Edit</a></li>
+            <li><a href="{% url dash_images_update request.user.tenant_id image.id %}">{%trans "Edit"%}</a></li>
       {% endif %}
-            <li><a id="launch_{{image.id}}" class="launch" href="{% url dash_images_launch request.user.tenant_id image.id %}">Launch</a></li>
+            <li><a id="launch_{{image.id}}" class="launch" href="{% url dash_images_launch request.user.tenant_id image.id %}">{%trans "Launch"%}</a></li>
           </ul>
         </td>
   </tr>
