--- a/django-openstack/django_openstack/templates/django_openstack/auth/_login.html
+++ b/django-openstack/django_openstack/templates/django_openstack/auth/_login.html
@@ -1,3 +1,4 @@
+{%load i18n%}
 <form action="" method="post">
   {% csrf_token %}
   <fieldset>
@@ -10,7 +11,7 @@
     {{field}}
     {% endfor %}
   {% block submit %}
-    <input type="submit" value="Login" />
+    <input type="submit" value="{%trans "Login"%}" />
   {% endblock %}
   </fieldset>
 </form>
