--- a/django-openstack/django_openstack/templates/django_openstack/dash/containers/_list.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/containers/_list.html
@@ -1,7 +1,8 @@
+{%load i18n%}
 <table id="containers" class="wide">
   <tr>
-    <th>Name</th>
-    <th>Actions</th>
+    <th>{% trans "Name" %}</th>
+    <th>{% trans "Actions" %}</th>
   </tr>
   {% for container in containers %}
   <tr class="{% cycle 'odd' 'even' %}">
@@ -9,8 +10,8 @@
     <td id="actions">
       <ul>
         <li class="form">{% include "django_openstack/dash/containers/_delete.html" with form=delete_form %}</li>
-        <li><a href="{% url dash_objects request.user.tenant_id container.name %}">List Objects</a></li>
-        <li><a href="{% url dash_objects_upload request.user.tenant_id container.name %}">Upload Object</a></li>
+        <li><a href="{% url dash_objects request.user.tenant_id container.name %}">{% trans "List Objects" %}</a></li>
+        <li><a href="{% url dash_objects_upload request.user.tenant_id container.name %}">{% trans "Upload Object"%}</a></li>
       </ul>
     </td>
   </tr>
