--- a/django-openstack/django_openstack/templates/django_openstack/dash/containers/create.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/containers/create.html
@@ -1,4 +1,5 @@
 {% extends 'django_openstack/dash/base.html' %}
+{%load i18n%}
 
 {% block sidebar %}
   {% with current_sidebar="containers" %}
@@ -7,7 +8,7 @@
 {% endblock %}
 
 {% block page_header %}
-  {% include "django_openstack/common/_page_header.html" with title="Create Tenant" %}
+  {% include "django_openstack/common/_page_header.html" with title=_("Create Tenant") %}
 {% endblock page_header %}
 
 {% block dash_main %}
@@ -18,7 +19,7 @@
 
     <div class="right">
       <h3>Description:</h3>
-      <p>A container is a storage compartment for your data and provides a way for you to organize your data. You can think of a container as a folder in Windows® or a directory in UNIX®. The primary difference between a container and these other file system concepts is that containers cannot be nested. You can, however, create an unlimited number of containers within your account. Data must be stored in a container so you must have at least one container defined in your account prior to uploading data.</p>
+      <p>{% trans "A container is a storage compartment for your data and provides a way for you to organize your data. You can think of a container as a folder in Windows® or a directory in UNIX®. The primary difference between a container and these other file system concepts is that containers cannot be nested. You can, however, create an unlimited number of containers within your account. Data must be stored in a container so you must have at least one container defined in your account prior to uploading data."%}</p>
     </div>
     <div class="clear">&nbsp;</div>
   </div>
