--- a/django-openstack/django_openstack/templates/django_openstack/dash/floating_ips/_allocate.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/floating_ips/_allocate.html
@@ -1,7 +1,8 @@
+{%load i18n%}
 <form id="form_allocate" action="." class="form-delete" method="post">
   {% csrf_token %}
   {% for hidden in form.hidden_fields %}
     {{hidden}}
   {% endfor %}
-  <input class="action_input large-rounded" type="submit" value="Allocate IP" />
+  <input class="action_input large-rounded" type="submit" value="{%trans "Allocate IP"%}" />
 </form>
