--- a/django-openstack/django_openstack/templates/django_openstack/dash/floating_ips/_disassociate.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/floating_ips/_disassociate.html
@@ -1,8 +1,9 @@
+{%load i18n%}
 <form id="form_disassociate_{{ip.id}}" class="form-delete" method="post">
   {% csrf_token %}
   {% for hidden in form.hidden_fields %}
     {{hidden}}
   {% endfor %}
   <input name="floating_ip_id" type="hidden" value="{{ip.id}}" />
-  <input id="delete_{{ip.id}}" class="delete" title="Disassociate Floating IP: {{ip.id}} ({{ip.ip}})" type="submit" value="Disassociate" />
+  <input id="delete_{{ip.id}}" class="delete" title="Disassociate Floating IP: {{ip.id}} ({{ip.ip}})" type="submit" value="{% trans "Disassociate" %}" />
 </form>
