--- a/django-openstack/django_openstack/templates/django_openstack/dash/floating_ips/_list.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/floating_ips/_list.html
@@ -1,3 +1,4 @@
+{%load i18n%}
 <table id="floating_ips" class="wide">
   <tr>
     <th>IP</th>
@@ -10,8 +11,8 @@
     <td>
       {% if ip.fixed_ip %}
         <ul>
-          <li><span>Instance ID:</span> {{ip.instance_id}}</li>
-          <li><span>Fixed IP:</span> {{ip.fixed_ip}}</li>
+          <li><span>{%trans "Instance ID:"%}</span> {{ip.instance_id}}</li>
+          <li><span>{%trans "Fixed IP:"%}</span> {{ip.fixed_ip}}</li>
         </ul>
       {% else %}
         None
@@ -24,7 +25,7 @@
         {% if ip.fixed_ip %}
         <li class="form">{% include "django_openstack/dash/floating_ips/_disassociate.html" with form=disassociate_form %}</li>
         {% else %}
-          <li class="form"><a href="{% url dash_floating_ips_associate request.user.tenant_id ip.id %}">Associate to instance</a></li>
+          <li class="form"><a href="{% url dash_floating_ips_associate request.user.tenant_id ip.id %}">{%trans "Associate to instance"%}</a></li>
         {% endif %}
       </ul>
     </td>
