--- a/django-openstack/django_openstack/templates/django_openstack/dash/images/_form.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/images/_form.html
@@ -1,3 +1,4 @@
+{%load i18n%}
 <form id="image_form" action="" method="post">
   {% csrf_token %}
   {% for hidden in form.hidden_fields %}{{ hidden }}{% endfor %}
@@ -6,5 +7,5 @@
     {{ field.errors }}
     {{ field }}
   {% endfor %}
-  <input type="submit" value="Update Image" class="large-rounded" />
+  <input type="submit" value="{%trans "Update Image"%}" class="large-rounded" />
 </form>
