--- a/django-openstack/django_openstack/templates/django_openstack/dash/images/_launch_form.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/images/_launch_form.html
@@ -1,3 +1,4 @@
+{%load i18n%}
 <form id="launch_img" action="" method="post">
   {% csrf_token %}
   <fieldset>
@@ -10,7 +11,7 @@
       {{field}}
     {% endfor %}
     {% block submit %}
-      <input type="submit" value="Launch Instance" />
+      <input type="submit" value="{%trans "Launch Instance"%}" />
     {% endblock %}
   </fieldset>
 </form>
