--- a/django-openstack/django_openstack/templates/django_openstack/dash/images/index.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/images/index.html
@@ -18,8 +18,8 @@
 
     {% else %}
       <div class="message_box info">
-        <h2>Info</h2>
-        <p>There are currently no images.</p>
+        <h2>{% trans "Info"%}</h2>
+        <p>{% trans "There are currently no images."%}</p>
       </div>
     {% endif %}
 {% endblock %}
