--- a/django-openstack/django_openstack/templates/django_openstack/dash/instances/usage.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/instances/usage.html
@@ -1,6 +1,7 @@
 {% extends 'django_openstack/dash/base.html' %}
 {% load parse_date %}
 {% load sizeformat %}
+{%load i18n%}
 
 {% block sidebar %}
   {% with current_sidebar="overview" %}
@@ -10,7 +11,7 @@
 
 {% block page_header %}
   {# to make searchable false, just remove it from the include statement #}
-  {% include "django_openstack/common/_page_header.html" with title="Overview" %}
+  {% include "django_openstack/common/_page_header.html" with title=_("Overview") %}
 {% endblock page_header %}
 
 {% block dash_main %}
@@ -42,13 +43,13 @@
    </div>
 
     <div class='table_title wide'>
-      <a class="csv_download_link" href="{{csv_link}}">Download CSV &raquo;</a>
+      <a class="csv_download_link" href="{{csv_link}}">{% trans "Download CSV"%} &raquo;</a>
       <h3>Server Usage Summary
         <small>
           {% if show_terminated %}
-            ( <a href="{% url dash_overview %}">Hide Terminated</a> )
+            ( <a href="{% url dash_overview %}">{% trans "Hide Terminated"%}</a> )
           {% else %}
-            ( <a href="{% url dash_overview %}?show_terminated=1">Show Terminated</a> )
+            ( <a href="{% url dash_overview %}?show_terminated=1">{% trans "Show Terminated"%}</a> )
           {% endif %}
         </small>
       </h3>
@@ -56,15 +57,15 @@
 
     <table class="wide">
       <tr id='headings'>
-        <th>ID</th>
-        <th>Name</th>
-        <th>User</th>
-        <th>VCPUs</th>
-        <th>Ram Size</th>
-        <th>Disk Size</th>
-        <th>Flavor</th>
-        <th>Uptime</th>
-        <th>Status</th>
+        <th>{% trans "ID"%}</th>
+        <th>{% trans "Name"%}</th>
+        <th>{% trans "User"%}</th>
+        <th>{% trans "VCPUs"%}</th>
+        <th>{% trans "Ram Size"%}</th>
+        <th>{% trans "Disk Size"%}</th>
+        <th>{% trans "Flavor"%}</th>
+        <th>{% trans "Uptime"%}</th>
+        <th>{% trans "Status"%}</th>
       </tr>
       <tbody class='main'>
         {% for instance in instances %}
@@ -85,15 +86,16 @@
         </tr>
         {% empty %}
           <tr>
-              <td colspan=9> No active instances. </td>
+              <td colspan=9>{% trans "No active instances."%}</td>
           </tr>
         {% endfor %}
       </tbody>
     </table>
   {% else %}
       <div class="message_box info">
-        <h2>Info</h2>
-        <p>There are currently no instances.<br/><br/>You can launch an instance from the  <a href='{% url dash_images request.user.tenant_id %}'>Images Page.</a></p>
+        {% url dash_images request.user.tenant_id  as dash_img_url%}
+        <h2>{% trans "Info"%}</h2>
+        <p>{% blocktrans %}There are currently no instances.<br/><br/>You can launch an instance from the  <a href='{{dash_img_url}}'>Images Page.</a>{% endblocktrans %}</p>
       </div>
   {% endif %}
 
