--- a/django-openstack/django_openstack/templates/django_openstack/dash/keypairs/_list.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/keypairs/_list.html
@@ -1,8 +1,9 @@
+{%load i18n%}
 <table id="keypairs" class="wide">
   <tr>
-    <th>Name</th>
-    <th>Fingerprint</th>
-    <th>Actions</th>
+    <th>{% trans "Name"%}</th>
+    <th>{% trans "Fingerprint"%}</th>
+    <th>{% trans "Actions"%}</th>
   </tr>
   {% for keypair in keypairs %}
   <tr class="{% cycle 'odd' 'even' %}">
