--- a/django-openstack/django_openstack/templates/django_openstack/dash/networks/_delete_port.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/networks/_delete_port.html
@@ -1,3 +1,4 @@
+{%load i18n%}
 <form id="delete_port_form" class="form-delete" method="post">
   {% csrf_token %}
   {% for hidden in form.hidden_fields %}
@@ -5,5 +6,5 @@
   {% endfor %}
   <input name="network" type="hidden" value="{{network.id}}" />
   <input name="port" type="hidden" value="{{port.id}}" />
-  <input title="Delete this port" id="delete_{{port.id}}" class="delete" type="submit" value="Delete" />
+  <input title="Delete this port" id="delete_{{port.id}}" class="delete" type="submit" value="{% trans "Delete"%}" />
 </form>
