--- a/django-openstack/django_openstack/templates/django_openstack/dash/networks/_detach_port.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/networks/_detach_port.html
@@ -1,3 +1,4 @@
+{%load i18n%}
 <form id="detach_port_form" class="form-detach" method="post">
   {% csrf_token %}
   {% for hidden in form.hidden_fields %}
@@ -5,5 +6,5 @@
   {% endfor %}
   <input name="network" type="hidden" value="{{network.id}}" />
   <input name="port" type="hidden" value="{{port.id}}" />
-  <input title="Detach port from instance" id="detach_{{port.id}}" class="detach" type="submit" value="Detach" />
+  <input title="Detach port from instance" id="detach_{{port.id}}" class="detach" type="submit" value="{% trans "Detach"%}" />
 </form>
