--- a/django-openstack/django_openstack/templates/django_openstack/dash/networks/_form.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/networks/_form.html
@@ -1,3 +1,4 @@
+{%load i18n%}
 <form id="network_form" method="post">
   {% csrf_token %}
   {% for hidden in form.hidden_fields %}{{ hidden }}{% endfor %}
@@ -6,5 +7,5 @@
     {{ field.errors }}
     {{ field }}
   {% endfor %}
-  <input type="submit" value="Create Network" class="large-rounded" />
-</form> 
+  <input type="submit" value="{% trans "Create Network" %}" class="large-rounded" />
+</form>
