--- a/django-openstack/django_openstack/templates/django_openstack/dash/networks/_list.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/networks/_list.html
@@ -1,11 +1,12 @@
+{%load i18n%}
 <table id='networks' class="wide">
   <tr id='headings'>
-    <th>ID</th>
-    <th>Name</th>
-    <th>Ports</th>
-    <th>Available</th>
-    <th>Used</th>
-    <th>Action</th>
+    <th>{% trans "ID"%}</th>
+    <th>{% trans "Name"%}</th>
+    <th>{% trans "Ports"%}</th>
+    <th>{% trans "Available"%}</th>
+    <th>{% trans "Used"%}</th>
+    <th>{% trans "Action"%}</th>
   </tr>
   <tbody class='main'>
     {% for network in networks %}
@@ -18,7 +19,7 @@
           <td id="actions">
             <ul>
               <li class="form">{% include "django_openstack/dash/networks/_delete.html" with form=delete_form %}</li>
-              <li><a href='{% url dash_network_rename request.user.tenant_id network.id %}'>Rename</a></li>
+              <li><a href='{% url dash_network_rename request.user.tenant_id network.id %}'>{% trans "Rename"%}</a></li>
             </ul>
         </td>
       </tr>
