--- a/django-openstack/django_openstack/templates/django_openstack/dash/networks/_rename_form.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/networks/_rename_form.html
@@ -1,3 +1,4 @@
+{%load i18n%}
 <form id="rename_form" method="post">
   {% csrf_token %}
   {% for hidden in form.hidden_fields %}{{ hidden }}{% endfor %}
@@ -7,5 +8,5 @@
     {{ field }}
   {% endfor %}
   <input type="hidden" name="network" value="{{network.network.id}}"/>
-  <input type="submit" value="Rename Network" class="large-rounded" />
-</form> 
+  <input type="submit" value="{% trans "Rename Network"%}" class="large-rounded" />
+</form>
