--- a/django-openstack/django_openstack/templates/django_openstack/dash/networks/_toggle_port.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/networks/_toggle_port.html
@@ -1,3 +1,4 @@
+{%load i18n%}
 <form id="port_toggle_form" class="form-toggle" method="post">
   {% csrf_token %}
   {% for hidden in form.hidden_fields %}
@@ -7,9 +8,9 @@
   <input name="port" type="hidden" value="{{port.id}}" />
   {% if port.state == 'DOWN' %}
     <input name="state" type="hidden" value="ACTIVE" />
-    <input title="Turn port UP" id="port_up_{{port.id}}" class="port_up" type="submit" value="Port UP" />
+    <input title="Turn port UP" id="port_up_{{port.id}}" class="port_up" type="submit" value="{% trans "Port UP"%}" />
   {% else %}
     <input name="state" type="hidden" value="DOWN" />
-    <input title="Turn port DOWN" id="port_up_{{port.id}}" class="port_down" type="submit" value="Port DOWN" />
+    <input title="Turn port DOWN" id="port_up_{{port.id}}" class="port_down" type="submit" value="{% trans "Port DOWN"%}" />
   {% endif %}
 </form>
