--- a/django-openstack/django_openstack/templates/django_openstack/dash/networks/rename.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/networks/rename.html
@@ -1,4 +1,5 @@
 {% extends 'django_openstack/dash/base.html' %}
+{%load i18n%}
 
 {% block sidebar %}
   {% with current_sidebar="networks" %}
@@ -8,7 +9,7 @@
 
 {% block page_header %}
   {# to make searchable false, just remove it from the include statement #}
-  {% include "django_openstack/common/_page_header.html" with title="Rename Network" %}
+  {% include "django_openstack/common/_page_header.html" with title=_("Rename Network") %}
 {% endblock page_header %}
 
 {% block headerjs %}
@@ -23,12 +24,12 @@
   <div class="dash_block">
     <div class="left">
       {% include 'django_openstack/dash/networks/_rename_form.html' with form=rename_form %}
-      <h3><a href="{% url dash_networks request.user.tenant_id %}"><< Return to networks list</a></h3>
+      <h3><a href="{% url dash_networks request.user.tenant_id %}"><< {% trans "Return to networks list"%}</a></h3>
     </div>
 
     <div class="right">
-      <h3>Rename:</h3>
-      <p>Enter a new name for your network.</p>
+      <h3>{% trans "Rename"%}:</h3>
+      <p>{% trans "Enter a new name for your network."%}</p>
     </div>
     <div class="clear">&nbsp;</div>
   </div>
