--- a/django-openstack/django_openstack/templates/django_openstack/dash/objects/_copy.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/objects/_copy.html
@@ -1,3 +1,4 @@
+{%load i18n%}
 <form id="object_copy"  method="post">
   {% csrf_token %}
   {% for hidden in form.hidden_fields %}{{ hidden }}{% endfor %}
@@ -6,5 +7,5 @@
     {{ field.errors }}
     {{ field }}
   {% endfor %}
-  <input type="submit" value="Copy Object" class="large-rounded" />
+  <input type="submit" value="{% trans "Copy Object"%}" class="large-rounded" />
 </form>
