--- a/django-openstack/django_openstack/templates/django_openstack/dash/objects/_delete.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/objects/_delete.html
@@ -1,8 +1,9 @@
+{%load i18n%}
 <form id="form_delete_{{ object.name }}" class="form-delete" action="." method="post">
   {% csrf_token %}
   {% for hidden in form.hidden_fields %}
     {{hidden}}
   {% endfor %}
   <input name="object_name" type="hidden" value="{{ object.name }}" />
-  <input id="delete_{{ object.name }}" class="delete" title="Object: {{ object.name }}" type="submit" value="Delete" />
+  <input id="delete_{{ object.name }}" class="delete" title="Object: {{ object.name }}" type="submit" value="{% trans "Delete"%}" />
 </form>
