--- a/django-openstack/django_openstack/templates/django_openstack/dash/objects/_form.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/objects/_form.html
@@ -1,3 +1,4 @@
+{%load i18n%}
 <form id="object_form" enctype="multipart/form-data" method="post">
   {% csrf_token %}
   {% for hidden in form.hidden_fields %}{{ hidden }}{% endfor %}
@@ -6,5 +7,5 @@
     {{ field.errors }}
     {{ field }}
   {% endfor %}
-  <input type="submit" value="Upload Object" class="large-rounded" />
+  <input type="submit" value="{% trans "Upload Object"%}" class="large-rounded" />
 </form>
