--- a/django-openstack/django_openstack/templates/django_openstack/dash/objects/_list.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/objects/_list.html
@@ -1,16 +1,17 @@
+{%load i18n%}
 <table id="objects" class="wide">
   <tr>
-    <th>Name</th>
-    <th style="width: 100px;">Actions</th>
+    <th>{% trans "Name"%}</th>
+    <th style="width: 100px;">{% trans "Actions"%}</th>
   </tr>
   {% for object in objects %}
   <tr class="{% cycle 'odd' 'even' %}">
     <td>{{ object.name }}</td>
     <td id="actions">
       <ul>
-        <li><a href="{% url dash_object_copy request.user.tenant_id container_name object.name %}">Copy</a></li>
+        <li><a href="{% url dash_object_copy request.user.tenant_id container_name object.name %}">{% trans "Copy"%}</a></li>
         <li class="form">{% include "django_openstack/dash/objects/_delete.html" with form=delete_form %}</li>
-        <li><a href="{% url dash_objects_download request.user.tenant_id container_name object.name %}">Download</a>
+        <li><a href="{% url dash_objects_download request.user.tenant_id container_name object.name %}">{% trans "Download"%}</a>
       </ul>
     </td>
   </tr>
