--- a/django-openstack/django_openstack/templates/django_openstack/dash/objects/upload.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/objects/upload.html
@@ -1,4 +1,5 @@
 {% extends 'django_openstack/dash/base.html' %}
+{%load i18n%}
 
 {% block sidebar %}
   {% with current_sidebar="containers" %}
@@ -7,7 +8,7 @@
 {% endblock %}
 
 {% block page_header %}
-  {% include "django_openstack/common/_page_header.html" with title="Upload Objects" %}
+  {% include "django_openstack/common/_page_header.html" with title=_("Upload Objects") %}
 {% endblock page_header %}
 
 {% block dash_main %}
@@ -16,12 +17,12 @@
   <div class="dash_block wide form">
     <div class="left">
       {% include 'django_openstack/dash/objects/_form.html' with form=upload_form %}
-      <h3><a href="{% url dash_objects request.user.tenant_id container_name %}">&lt;&lt; Return to objects list</a></h3>
+      <h3><a href="{% url dash_objects request.user.tenant_id container_name %}">&lt;&lt; {% trans "Return to objects list"%}</a></h3>
     </div>
 
     <div class="right">
-      <h3>Description:</h3>
-      <p>An object is the basic storage entity and any optional metadata that represents the files you store in the OpenStack Object Storage system. When you upload data to OpenStack Object Storage, the data is stored as-is (no compression or encryption) and consists of a location (container), the object's name, and any metadata consisting of key/value pairs.</p>
+      <h3>{% trans "Description"%}:</h3>
+      <p>{% trans "An object is the basic storage entity and any optional metadata that represents the files you store in the OpenStack Object Storage system. When you upload data to OpenStack Object Storage, the data is stored as-is (no compression or encryption) and consists of a location (container), the object's name, and any metadata consisting of key/value pairs."%}</p>
     </div>
     <div class="clear">&nbsp;</div>
   </div>
