--- a/django-openstack/django_openstack/templates/django_openstack/dash/security_groups/edit_rules.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/security_groups/edit_rules.html
@@ -1,4 +1,5 @@
 {% extends 'django_openstack/dash/base.html' %}
+{%load i18n%}
 
 {% block sidebar %}
   {% with current_sidebar="security_groups" %}
@@ -7,20 +8,20 @@
 {% endblock %}
 
 {% block page_header %}
-  {% include "django_openstack/common/_page_header.html" with title="Edit Security Group Rules" %}
+  {% include "django_openstack/common/_page_header.html" with title=_("Edit Security Group Rules") %}
 {% endblock page_header %}
 
 {% block dash_main %}
   <div class="dash_block">
     <div class="left">
-      <h3> Rules for Security Group '{{security_group.name}}'</h3>
+      <h3> {% trans "Rules for Security Group"%} '{{security_group.name}}'</h3>
       <table id="security_groups" class="wide">
         <tr>
-          <th>IP Protocol</th>
-          <th>From Port</th>
-          <th>To Port</th>
-          <th>CIDR</th>
-          <th>Actions</th>
+          <th>{% trans "IP Protocol"%}</th>
+          <th>{% trans "From Port"%}</th>
+          <th>{% trans "To Port"%}</th>
+          <th>{% trans "CIDR"%}</th>
+          <th>{% trans "Actions"%}</th>
         </tr>
         {% for rule in security_group.rules %}
           <tr class="{% cycle 'odd' 'even' %}">
@@ -37,7 +38,7 @@
         {% empty %}
         <tr>
           <td colspan="100%">
-            No rules for this security group
+            {% trans "No rules for this security group"%}
           </td>
         </tr>
         {% endfor %}
@@ -45,7 +46,7 @@
     </div>
     <div class="right security_group_rule_form_wrapper">
       <div class="security_group_rule_form_inner">
-        <h3>Add a rule</h3>
+        <h3>{% trans "Add a rule"%}</h3>
         <form id="security_group_rule_form"  method="post">
           <fieldset>
             {% csrf_token %}
@@ -56,7 +57,7 @@
               {{ field }}
             {% endfor %}
             <input name="security_group_id" type="hidden" value="{{security_group.id}}" />
-            <input type="submit" value="Add Rule" class="large-rounded action_link" />
+            <input type="submit" value="{% trans "Add Rule"%}" class="large-rounded action_link" />
           </fieldset>
         </form>
       </div>
