--- a/django-openstack/django_openstack/templates/django_openstack/dash/snapshots/_form.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/snapshots/_form.html
@@ -1,3 +1,4 @@
+{%load i18n%}
 <form id="snapshot_form"  method="post">
   <fieldset>
     {% csrf_token %}
@@ -7,7 +8,7 @@
       {{ field.errors }}
       {{ field }}
     {% endfor %}
-    <input type="submit" value="Create Snapshot" class="large-rounded" />
+    <input type="submit" value="{% trans "Create Snapshot"%}" class="large-rounded" />
   </fieldset>
-</form> 
+</form>
 
