--- a/django-openstack/django_openstack/templates/django_openstack/dash/snapshots/create.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/snapshots/create.html
@@ -1,4 +1,5 @@
 {% extends 'django_openstack/dash/base.html' %}
+{%load i18n%}
 
 {% block sidebar %}
   {% with current_sidebar="snapshots" %}
@@ -15,20 +16,20 @@
 {% endblock %}
 
 {% block page_header %}
-  {% include "django_openstack/common/_page_header.html" with title="Create a Snapshot" %}
+  {% include "django_openstack/common/_page_header.html" with title=_("Create a Snapshot") %}
 {% endblock page_header %}
 
 {% block dash_main %}
   <div class="dash_block">
     <div class="left">
-      <h3>Choose a name for your snapshot.</h3>
+      <h3>{% trans "Choose a name for your snapshot."%}</h3>
       {% include 'django_openstack/dash/snapshots/_form.html' with form=create_form %}
-      <h3><a href="{% url dash_snapshots request.user.tenant_id %}"><< Return to snapshots list</a></h3>
+      <h3><a href="{% url dash_snapshots request.user.tenant_id %}"><< {% trans "Return to snapshots list"%}</a></h3>
     </div>
 
     <div class="right">
-      <h3>Description:</h3>
-      <p>Snapshots preserve the disk state of a running instance.</p>
+      <h3>{% trans "Description"%}:</h3>
+      <p>{% trans "Snapshots preserve the disk state of a running instance."%}</p>
     </div>
     <div class="clear">&nbsp;</div>
   </div>
